fix: Fixed db populate
