# server/api/oas-doc.yaml
@@ -24,12 +24,21 @@ paths:
   /api/v1/finders/{_id}: {$ref: resources/finder.yaml#/paths/api-v1-finders-id}
   /api/v1/config: {$ref: resources/configuration.yaml#/paths/api-v1-config}
   /api/v1/dashboard: {$ref: resources/dashboard.yaml#/paths/api-v1-dashboard}
-  /api/v1/questions: {$ref: resources/question.yaml#/paths/api-v1-questions}
-  /api/v1/questions/{_id}: {$ref: resources/question.yaml#/paths/api-v1-questions-id}
-  /api/v1/questions/{_id}/ban: {$ref: resources/question.yaml#/paths/api-v1-questions-id-ban}
-  /api/v1/replies: {$ref: resources/reply.yaml#/paths/api-v1-replies}
-  /api/v1/replies/{_id}: {$ref: resources/reply.yaml#/paths/api-v1-replies-id}
-  /api/v1/replies/{_id}/ban: {$ref: resources/reply.yaml#/paths/api-v1-replies-id-ban}
+  /api/v1/populateDb:
+    post:
+      x-router-controller: DBController
+      tags: [Administration]
+      description: Repopulates DB
+      operationId: populateDB
+      responses:
+        201:
+          description: DB Populated
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
 
 components:
   securitySchemes:
@@ -47,8 +56,6 @@ components:
     finder: {$ref: resources/finder.yaml#/schemas/finder}
     configuration: {$ref: resources/configuration.yaml#/schemas/configuration}
     dashboard: {$ref: resources/dashboard.yaml#/schemas/dashboard}
-    question: {$ref: resources/question.yaml#/schemas/question}
-    reply: {$ref: resources/reply.yaml#/schemas/reply}
     error:
       type: object
       required:
